--- a/app_web/proyectos/templates/proyectos/editar_tarea.html
+++ b/app_web/proyectos/templates/proyectos/editar_tarea.html
@@ -1,10 +1,10 @@
 {% extends "base.html" %}
 {% block content %}
-<h2>Editar Proyecto: {{ proyecto.nombre }}</h2>
+<h2>Editar Tarea: {{ tarea.titulo }}</h2>
 <form method="post">
     {% csrf_token %}
     {{ form.as_p }}
     <button type="submit" class="btn btn-primary">Guardar</button>
-    <a href="{% url 'lista_proyectos' %}" class="btn btn-secondary">Cancelar</a>
+    <a href="{% url 'detalle_proyecto' tarea.proyecto.id %}" class="btn btn-secondary">Cancelar</a>
 </form>
 {% endblock %}
