--- a/app_web/proyectos/templates/proyectos/lista.html
+++ b/app_web/proyectos/templates/proyectos/lista.html
@@ -1,14 +1,18 @@
 {% extends "base.html" %}
 {% block content %}
-<h2>Lista de Proyectos</h2>
+<h2>Proyectos</h2>
+{% if proyectos %}
 <ul>
     {% for proyecto in proyectos %}
-        <li><a href="{% url 'detalle_proyecto' proyecto.id %}">{{ proyecto.nombre }}</a> - {{ proyecto.descripcion }}</li>
-    {% empty %}
-        <li>No hay proyectos aún.</li>
+    <li>
+        <a href="{% url 'detalle_proyecto' proyecto.id %}">{{ proyecto.nombre }}</a>
+        <a href="{% url 'editar_proyecto' proyecto.id %}" class="btn btn-sm btn-primary">Editar</a>
+        <a href="{% url 'eliminar_proyecto' proyecto.id %}" class="btn btn-sm btn-danger">Eliminar</a>
+    </li>
     {% endfor %}
 </ul>
-{% if user.es_gestor %}
-    <a href="{% url 'crear_proyecto' %}" class="btn btn-primary">Crear Proyecto</a>
+{% else %}
+<p>No hay proyectos disponibles.</p>
 {% endif %}
+<a href="{% url 'crear_proyecto' %}" class="btn btn-primary">Crear Proyecto</a>
 {% endblock %}
