--- a/app_web/usuarios/templates/base.html
+++ b/app_web/usuarios/templates/base.html
@@ -2,9 +2,16 @@
 <html>
 <head>
     <title>Gestión de Tareas y Mercado</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
 </head>
-<body>
+<body style="background-color: #f8f9fa;">
+    <a href="{% url 'ofertas_empleo' %}" class="btn btn-success">Ir a Ofertas</a>
+    <div class="list-group">
+        <a href="{% url 'ofertas_empleo' %}" class="list-group-item list-group-item-action">Ofertas de Empleo</a>
+        <a href="{% url 'proyectos:index' %}" class="list-group-item list-group-item-action">Proyectos</a>
+        <a href="{% url 'datos_externos:index' %}" class="list-group-item list-group-item-action">Datos Externos</a>
+    </div>
     <div class="container">
         {% block content %}{% endblock %}
     </div>
