--- a/app_web/app_web/templates/index.html
+++ b/app_web/app_web/templates/index.html
@@ -22,7 +22,7 @@
                 <div class="card-body">
                     <h5 class="card-title">Proyectos</h5>
                     <p class="card-text">Gestiona tus proyectos y tareas.</p>
-                    <a href="{% url 'proyectos:index' %}" class="btn btn-primary">Ir a Proyectos</a>
+                    <a href="{% url 'proyectos:lista_proyectos' %}" class="btn btn-primary">Ir a Proyectos</a>
                 </div>
             </div>
         </div>
@@ -31,9 +31,9 @@
                 <div class="card-body">
                     <h5 class="card-title">Datos Externos</h5>
                     <p class="card-text">Accede a datos externos recopilados.</p>
-                    <a href="{% url 'datos_externos:index' %}" class="btn btn-primary">Ir a Datos</a>
+                    <a href="{% url 'datos_externos:lista_ofertas' %}" class="btn btn-primary">Ir a Datos</a>
                 </div>
             </div>
         </div>
     </div>
-{% endblock %}
+{% endblock %}  
