--- a/app_web/datos_externos/templates/datos_externos/lista_ofertas.html
+++ b/app_web/datos_externos/templates/datos_externos/lista_ofertas.html
@@ -21,7 +21,7 @@
         </div>
     </div>
     <button type="submit" class="btn btn-primary mt-2">Filtrar</button>
-    <a href="{% url 'lista_ofertas' %}" class="btn btn-secondary mt-2">Limpiar</a>
+    <a href="{% url 'datos_externos:lista_ofertas' %}" class="btn btn-secondary mt-2">Limpiar</a>
 </form>
 
 {% if ofertas %}
@@ -46,5 +46,5 @@
     <p>No hay ofertas que coincidan con los filtros.</p>
 {% endif %}
 
-<a href="{% url 'importar_ofertas' %}" class="btn btn-secondary">Volver a importar</a>
+<a href="{% url 'datos_externos:importar_ofertas' %}" class="btn btn-secondary">Volver a importar</a>
 {% endblock %}
