--- a/app_web/usuarios/templates/base.html
+++ b/app_web/usuarios/templates/base.html
@@ -6,6 +6,15 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
 </head>
 <body style="background-color: #f8f9fa;">
+    <style>
+        .card-title a {
+            color: #007bff;
+            text-decoration: none;
+        }
+        .card-title a:hover {
+            text-decoration: underline;
+        }
+    </style>
     <a href="{% url 'ofertas_empleo' %}" class="btn btn-success">Ir a Ofertas</a>
     <div class="list-group">
         <a href="{% url 'ofertas_empleo' %}" class="list-group-item list-group-item-action">Ofertas de Empleo</a>
