--- a/app_web/proyectos/templates/proyectos/completar_tarea.html
+++ b/app_web/proyectos/templates/proyectos/completar_tarea.html
@@ -1,10 +1,12 @@
-{% extends "base.html" %}
+{% extends 'base.html' %}
 {% block content %}
-<h2>Completar Tarea: {{ tarea.titulo }}</h2>
-<p>¿Estás seguro de que quieres marcar esta tarea como completada?</p>
-<form method="post">
-    {% csrf_token %}
-    <button type="submit" class="btn btn-success">Completar</button>
-    <a href="{% url 'detalle_proyecto' tarea.proyecto.id %}" class="btn btn-secondary">Cancelar</a>
-</form>
-{% endblock %} 
+<div class="container mt-4">
+    <h1>{{ titulo }}</h1>
+    <p>¿Quieres marcar la tarea "{{ tarea.titulo }}" como completada?</p>
+    <form method="POST">
+        {% csrf_token %}
+        <button type="submit" class="btn btn-success">Sí, completar</button>
+        <a href="{% url 'proyectos:detalle_proyecto' tarea.proyecto.id %}" class="btn btn-secondary">Cancelar</a>
+    </form>
+</div>
+{% endblock %}
