--- a/app_web/proyectos/templates/proyectos/eliminar.html
+++ b/app_web/proyectos/templates/proyectos/eliminar.html
@@ -1,10 +1,12 @@
-{% extends "base.html" %}
+{% extends 'base.html' %}
 {% block content %}
-<h2>Eliminar Proyecto: {{ proyecto.nombre }}</h2>
-<p>¿Estás seguro de que quieres eliminar este proyecto?</p>
-<form method="post">
-    {% csrf_token %}
-    <button type="submit" class="btn btn-danger">Eliminar</button>
-    <a href="{% url 'lista_proyectos' %}" class="btn btn-secondary">Cancelar</a>
-</form>
+<div class="container mt-4">
+    <h1>{{ titulo }}</h1>
+    <p>¿Estás seguro de que quieres eliminar el proyecto "{{ proyecto.nombre }}"?</p>
+    <form method="POST">
+        {% csrf_token %}
+        <button type="submit" class="btn btn-danger">Sí, eliminar</button>
+        <a href="{% url 'proyectos:lista_proyectos' %}" class="btn btn-secondary">Cancelar</a>
+    </form>
+</div>
 {% endblock %}
