--- a/app_web/app_web/templates/base.html
+++ b/app_web/app_web/templates/base.html
@@ -26,7 +26,10 @@
                 <ul class="navbar-nav ms-auto">
                     {% if user.is_authenticated %}
                         <li class="nav-item">
-                            <a class="nav-link" href="{% url 'logout' %}">Cerrar Sesión</a>
+                            <form method="post" action="{% url 'usuarios:logout' %}" style="display:inline;">
+                                {% csrf_token %}
+                                <button type="submit">Cerrar sesión</button>
+                            </form>
                         </li>
                     {% else %}
                         <li class="nav-item">
